# SentinelIQ

./: .gitignore  Makefile  README.md  pyproject.toml  repomix-output.xml  run.py  start.sh  verify_step1.py  verify_step2.py  verify_step3.py  verify_step4.py  verify_step5.py  verify_step6.py  verify_step7.py  verify_step8.py
copilot/: api.py  cli.py  evaluation.py  graph.py  rag.py
data/evaluation/: evaluation_seed_v001.jsonl
data/raw/: dataset_manifest.json
data/raw/logs/: session_events_recovery.json
data/raw/release_notes/: deployment_checklist.txt  release_notes_NXTEL_2021_Q1_v1.0.0.docx  release_notes_NXTEL_2021_Q2_v1.1.0.docx  release_notes_NXTEL_2021_Q3_v1.2.0.docx  release_notes_NXTEL_2021_Q4_v1.3.0.docx  release_notes_NXTEL_2022_Q1_v2.0.0.docx  release_notes_NXTEL_2022_Q2_v2.1.0.docx  release_notes_NXTEL_2022_Q3_v2.2.0.docx  release_notes_NXTEL_2022_Q3_v2.2.0_hotfix1.docx  release_notes_NXTEL_2022_Q4_v2.3.0.docx  (+11 more)
data/reports/: raw_data_validation.md
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.jsx  index.css
ingestion/: __init__.py  api_client.py  cli.py  extractor.py  readers.py  repositories.py  service.py  validatior.py  validator.py
knowledge_prep/: cli.py  enrichment.py  quality_engine.py  quality_reports.py
scripts/: ingest_master.py  knowledge_prep.py  migrate.py  validate_data.py
sentineliq-frontend/: index.html  package-lock.json  package.json  tailwind.config.js
sentineliq-frontend/src/: App.jsx  index.css
tests/: test_api_cors.py
utils/: config.py  domain.py  persistance.py  persistence.py
(+28 files in other folders)
