[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sentineliq"
version = "0.1.0"
description = "SentinelIQ AI Support Copilot"
readme = "README.md"
requires-python = ">=3.11"

dependencies = [
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "python-dotenv>=1.0",
    "oracledb>=2.0",
    "pandas>=2.0",
    "pyarrow>=15.0",
    "requests>=2.31",
    "httpx>=0.27",
    "tenacity>=9.0",
    "fastapi>=0.115",
    "uvicorn>=0.30",
    "chromadb>=0.5",
    "sentence-transformers>=3.0",
    "langchain>=0.3",
    "langchain-community>=0.3",
    "langgraph>=0.2"
]

[project.optional-dependencies]

dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "ruff>=0.5"
]

readers = [
    "pypdf>=5.0",
    "python-docx>=1.1"
]

llm = [
    "langchain-google-genai>=2.0"
]

[tool.setuptools.packages.find]
include = [
    "utils*",
    "ingestion*",
    "knowledge_prep*",
    "copilot*"
]

[tool.ruff]
line-length = 120
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"